# cfg-ip

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README_zh.md  build.rs
src/: adapter.rs  cli_test.rs  lib.rs  main.rs  set_ip.rs  store.rs  ui.rs  utils.rs
ui/: help-info.slint  interface-item.slint  light.slint  listview.slint  main-ui.slint  pop-message.slint
