[package]
name = "cfg-ip"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version ="1.29.1", features = ["full"]}
tokio-stream = "0.1.14"
futures-util = "0.3.8"
futures-core = "0.3.28"
# tracing-subscriber = "0.3.17"
# tracing = "0.1.37"
# schema = "0.1.0"
# url = "2.4.0"
net-adapters = {path = "D:/Code/rust/net-adapters"}
anyhow = "1.0.75"
async-stream = "0.3.5"
winapi = {version= "0.3.9", features = ["iphlpapi", "impl-default", "winerror"]}
widestring = "*"
encoding = "0.2.33"
serde_derive = "1.0.171"
serde = "1.0.171"
confy = { version = "0.5.1", default-features = false, features = [
    "yaml_conf",
] }
slint = "1.3.2"
itertools = "0.12.0"


[build-dependencies]
winres = "0.1.12"
slint-build = "1.3.2"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
