[package]
name = "cfg-ip"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
futures-util = "0.3.8"
futures-core = "0.3.28"
net-adapters = { git = "https://github.com/asuper0/net-adapters", rev = "9d93385" }
anyhow = "1.0.75"
async-stream = "0.3.5"
encoding = "0.2.33"
serde_derive = "1.0.171"
serde = "1.0.171"
confy = { version = "0.5.1", default-features = false, features = [
    "yaml_conf",
] }
slint = "1.3.2"
itertools = "0.12.0"
rfd = "0.12.1"

[build-dependencies]
winres = "0.1.12"
slint-build = "1.3.2"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
