[package]
name = "cfg-ip"
version = "0.1.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net-adapters = { git = "https://github.com/asuper0/net-adapters", rev = "9d93385" }
anyhow = "1.0.75"
encoding = "0.2.33"
serde_derive = "1.0.171"
serde = "1.0.171"
confy = { version = "0.5.1", default-features = false, features = [
    "yaml_conf",
] }
slint = "1.4.0"
itertools = "0.12.0"

[build-dependencies]
winres = "0.1.12"
slint-build = "1.4.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
